# game-content-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Game_Content_Pipeline_기획서.md  LICENSE  Makefile  README.md  alembic.ini  demo_pipeline.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
game_data/schema/: item_schema.json  monster_schema.json  quest_schema.json  skill_schema.json
game_data/seed/: items.json  monsters.json  quests.json  world_setting.md
game_data/templates/: balance_report.j2  item_description.j2  patch_note.j2  quest_document.j2
prompts/: prompt_registry.yaml
prompts/v1/: item_system.txt  monster_system.txt  quest_system.txt  validation_system.txt
scripts/: benchmark.py  seed_data.py
src/: config.py
src/api/: __init__.py  main.py  middleware.py  schemas.py
src/api/routes/: content.py  pipeline.py  stats.py
src/cli/: __init__.py  main.py  ui.py
src/cli/commands/: __init__.py  export.py  item.py  monster.py  patch.py  quest.py  validate.py
src/dashboard/: __init__.py  app.py
src/export/: __init__.py  csv_export.py  json_export.py  markdown.py  renderer.py
src/generators/: __init__.py  base.py  item_generator.py  monster_generator.py  patch_generator.py  quest_generator.py  skill_generator.py
src/pipeline/: __init__.py  hooks.py  orchestrator.py  regenerator.py  tasks.py
src/storage/: __init__.py  models.py  repository.py
src/storage/migrations/: env.py
src/validators/: __init__.py  balance.py  consistency.py  duplicate.py  models.py  schema_check.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_export.py  test_generators.py  test_pipeline.py  test_regenerator.py  test_validators.py
tests/fixtures/: sample_items.json  sample_monsters.json
