[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-content-pipeline"
version = "0.1.0"
description = "AI-powered game content generation pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "celery[redis]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]",
    "rich",
    "sqlalchemy>=2.0",
    "alembic",
    "fastapi",
    "uvicorn",
    "streamlit",
    "jinja2",
    "psycopg2-binary",
    "redis",
    "structlog",
    "httpx",
    "numpy",
    "pandas",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-redis",
]

[project.scripts]
gcpipe = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=40"

# ------------------------------------------------------------------
# Ruff
# ------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "RUF012", # mutable class attributes (used intentionally for caches)
    "TCH",    # type-checking imports (from __future__ annotations handles this)
    "RUF003", # ambiguous unicode chars in comments (Korean project)
    "RUF001", # ambiguous unicode chars in strings (Korean project)
    "B904",   # raise from in except (celery retry pattern incompatible)
    "B905",   # zip strict= (Python 3.10+ only needed for mismatched lengths)
    "SIM105", # contextlib.suppress (explicit try/except is more readable)
    "SIM117", # combined with statements (readability preference)
    "UP042",  # StrEnum (keep str+Enum for Python 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N803", "N806", "E731", "B017", "F841"]

# ------------------------------------------------------------------
# Mypy
# ------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# ------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
omit = ["src/dashboard/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
